// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ClusterComponent should render the template with gapX 2xl 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-2xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapX lg 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-lg"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapX md 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-md"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapX none 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-none"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapX sm 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-sm"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapX xl 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapX xs 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-x-xs"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY 2xl 1`] = `
<div
  id="root13"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-2xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY lg 1`] = `
<div
  id="root11"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-lg"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY md 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-md"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY none 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-none"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY sm 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-sm"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY xl 1`] = `
<div
  id="root12"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;

exports[`ClusterComponent should render the template with gapY xs 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <app-cluster>
    <div
      class="cluster gap-y-xs"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-cluster>
</div>
`;
